syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";
import "receiver.proto";
import "alertrule.proto";
import "repeatsend.proto";

// alert history
message AlertHistory {
    string alert_history_id = 1;
    string alert_config_id = 2;
    string alert_name = 3;

    string severity_id = 4;
    string severity_ch = 5;

    string resource_group_id = 6;
    string resource_group_name = 7;
    string resource_type_id = 8;
    string resource_type = 9;
    string alerted_resource = 10;

    string receiver_group_id = 11;
    string receiver_group_name = 12;
    repeated Receiver receivers = 13;

    string alert_rule_group_id = 14;
    string trigger_alert_rule = 15;
    repeated AlertRule alert_rules = 16;

    RepeatSendType repeat_type = 17;
    string current_repeat_interval = 18;
    string next_repeat_interval = 19;
    string init_repeat_interval = 20;
    string max_repeat_interval = 21;

    string request_notification_status = 22;

    string event_time = 23;
}

message AlertHistoryRequest {
    string alert_history_id = 1;
    string alert_config_id = 2;
    string alert_rule_id = 3;
    string resource_id = 4;
    string product = 5;

    int32 page = 6;
    int32 limit = 7;
    string field = 8;
    string fuzz = 9;
    int64 start_time = 10;
    int64 end_time = 11;
}

message AlertHistoryResponse {
    repeated AlertHistory alert_history = 1;
    repeated Error error = 2;
}

service AlertHistoryHandler {
    // history
    rpc GetAlertHistory (AlertHistoryRequest) returns (AlertHistoryResponse) {
    }
}